--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/1c802f5b44.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Random User Generator</title>
 </head>
 <body>
@@ -41,19 +43,19 @@
     </div>
     <div class="infos-card">
         <div class="card">
-            <img src="img.jpg" alt="John" style="width:100%">
+            <i class="fa-solid fa-house-user"></i>
             <h1>John Doe</h1>
             <p class="title">CEO & Founder, Example</p>
             <p>Harvard University</p>
         </div>
         <div class="card">
-            <img src="img.jpg" alt="John" style="width:100%">
+            <i class="fa-regular fa-envelope"></i>
             <h1>John Doe</h1>
             <p class="title">CEO & Founder, Example</p>
             <p>Harvard University</p>
         </div>
         <div class="card">
-            <img src="img.jpg" alt="John" style="width:100%">
+            <i class="fa-solid fa-phone"></i>
             <h1>John Doe</h1>
             <p class="title">CEO & Founder, Example</p>
             <p>Harvard University</p>
