--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h5 class="banner-description">
             A free engin to generate random user data. Like Lorem Ipsum, but for people.
         </h5>
-        <button class="generate-btn">
+        <button id="btn" class="generate-btn">
            👨 GENERATE 🙎 
         </button>
     </main>
@@ -35,31 +35,8 @@
 
 
 
-    <div class="card">
-        <img src="img.jpg" alt="John" style="width:100%">
-        <h1>John Doe</h1>
-        <p class="title">CEO & Founder, Example</p>
-        <p>Harvard University</p>
-    </div>
-    <div class="infos-card">
-        <div class="card">
-            <i class="fa-solid fa-house-user"></i>
-            <h1>John Doe</h1>
-            <p class="title">CEO & Founder, Example</p>
-            <p>Harvard University</p>
-        </div>
-        <div class="card">
-            <i class="fa-regular fa-envelope"></i>
-            <h1>John Doe</h1>
-            <p class="title">CEO & Founder, Example</p>
-            <p>Harvard University</p>
-        </div>
-        <div class="card">
-            <i class="fa-solid fa-phone"></i>
-            <h1>John Doe</h1>
-            <p class="title">CEO & Founder, Example</p>
-            <p>Harvard University</p>
-        </div>
+    <div id="root">
+        
     </div>
 
 
