--- a/index.html
+++ b/index.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <script src="https://kit.fontawesome.com/1c802f5b44.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Random User Generator</title>
 </head>
 <body>
 
-    <nav class="nav-items">
-        <h1 class="nav-title">
-            Random User 
-            Generator
-        </h1>
-        <button class="github-btn">
-            Follow me on Github
-        </button>
+    <nav class="navbar navbar-expand-lg mb-8 bg-black navbar-dark p-2 ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#" id="logo-font">RANDOM USER GENERATOR</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          </div>
+          <button type="button" class="btn btn-success">Follow on Github <i class="fa fa-github" aria-hidden="true"></i></button>
+        </div>
     </nav>
     <main class="banner">
         <h1 class="banner-title">
